# PyMuLiSe

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_venv.sh  start_env.sh
modules/: filesys_transcoder.py  filesys_utils.py  general_utils.py  lastfm_client.py  library_service.py  library_utils.py  model_album.py  model_artist.py  model_song.py  playback_module.py  scene_mapper.py  user_service.py  wikicrawler.py
pymulise/: extract_covers.py  main.py  test_album.py  test_song.py
src/: main.py  test_album.py  test_library.py  test_song.py
src/modules/: filesys_utils.py  lastfm_client  library.py  library_service.py  library_utils.py  model_album.py  model_artist.py  model_song.py  utils.py
src/pymulise/: main.py  test_library.py
static/: index.html
